--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "tsc -w"
+        "start:build": "tsc -w",
+        "start:run": "nodemon build/index.js",
+        "start": "concurrently npm:start:*"
     },
     "keywords": [],
     "author": "",
@@ -13,5 +14,9 @@
     "devDependencies": {
         "@types/node": "^18.7.14",
         "typescript": "^4.8.2"
+    },
+    "dependencies": {
+        "concurrently": "^7.3.0",
+        "nodemon": "^2.0.19"
     }
 }
